# davemail

./: .davemailrc  .gitignore  .mbsyncrc  .msmtprc  .notmuch-config  .vdirsyncerrc  README.md  davemail.el  davemail.py  postsync.py  postsync.sh  presync.py  pyproject.toml  sync  syncmail
hacks/: rietveld.py
signatures/: eyeo.txt
tests/: conftest.py  test_infrastructure_validation.py
